--- a/public/pages/auth/auth.html
+++ b/public/pages/auth/auth.html
@@ -1,85 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Authentication</title>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="stylesheet" href="pages/auth/auth.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+    />
+    <link rel="stylesheet" href="pages/auth/auth.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap"
+      rel="stylesheet"
+    />
 
     <style media="screen">
-        input:-webkit-autofill,
-        input:-webkit-autofill:hover,
-        input:-webkit-autofill:focus,
-        input:-webkit-autofill:active {
-            -webkit-box-shadow: 0 0 0 30px #28272F inset !important;
-        }
+      input:-webkit-autofill,
+      input:-webkit-autofill:hover,
+      input:-webkit-autofill:focus,
+      input:-webkit-autofill:active {
+        -webkit-box-shadow: 0 0 0 30px #28272f inset !important;
+      }
 
-        *,
-        *:before,
-        *:after {
-            padding: 0;
-            margin: 0;
-            box-sizing: border-box;
-        }
-
- 
+      *,
+      *:before,
+      *:after {
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
+    <a
+      style="color: white; font-weight: 600; font-size: 4rem; margin-left: 2rem"
+      class="navbar-brand"
+      href="#"
+      ><span id="logo-F">F</span>- RAPS</a
+    >
     <div class="background">
-        <div class="shape"></div>
-        <div class="shape"></div>
+      <img class="mic-img" src="mic.png" alt="" />
     </div>
     <div class="container">
-        <div class="row">
-            <div   class="col s12 m6 offset-m3">
-                <ul style="  background-color: rgba(255, 255, 255, 0.13); " class="tabs">
-                    <li class="tab col s6"><a  style="color: white!important;" href="#login">Log In</a></li>
-                    <li class="tab col s6"><a style="color: white!important;" href="#signup">Sign Up</a></li>
-                </ul>
-            </div>
-            <div class="forms" id="login">
-                <h3>Login Here</h3>
+      <div class="forms" id="login">
+        <h3>Login Here</h3>
 
-                <label for="username">Nickname</label>
-                <input type="text" autocomplete="do-not-autofill" id="login-nickname">
+        <label for="username">Nickname</label>
+        <input type="Text" autocomplete="do-not-autofill" id="login-nickname" />
 
-                <label for="password">Password</label>
-                <input type="password" id="login-password" autocomplete="new-passwordasas">
+        <label for="password">Password</label>
+        <input
+          type="password"
+          id="login-password"
+          autocomplete="new-passwordasas"
+        />
+        <p class="loginpage underline text-sm underline mt-6 pointer-cursor">
+          Dont have an account ? Sign Up
+        </p>
+        <div id="loader" class="loader"></div>
+        <button id="login-btn">Log In</button>
+      </div>
+      <div class="forms" id="signup" style="height: 540px !important">
+        <h3>Sign Up Here</h3>
 
-                <button id="login-btn">Log In</button>
-            </div>
-            <div class="forms" id="signup">
-                <h3>Sign Up Here</h3>
+        <label for="username">Nickname</label>
+        <input
+          type="text"
+          autocomplete="do-not-autofill"
+          id="signup-nickname"
+        />
 
-                <label for="username">Nickname</label>
-                <input type="text" autocomplete="do-not-autofill" id="signup-nickname">
-
-                <label for="password">Password</label>
-                <input type="password"  id="signup-password" autocomplete="new-passwordasas">
-                <div style="margin-top: 30PX;" class="file-field input-field">
-                    <div class="btn">
-                        <span>Upload</span>
-                        <input type="file" id="signup-profile-picture" accept="image/*">
-                    </div>
-                    <div class="file-path-wrapper">
-                        <input style="border-bottom: none !important;" class="file-path validate" type="text" placeholder="Upload your profile picture">
-                    </div>
-                </div>
-                <button id="signup-btn"> Sign Up</button>
-            </div>
+        <label for="password">Password</label>
+        <input
+          type="password"
+          id="signup-password"
+          autocomplete="new-passwordasas"
+        />
+        <p class="signuppage underline text-sm underline mt-6 pointer-cursor">
+          Already have an account? Login
+        </p>
+        <div style="margin-top: 30px" class="file-field input-field">
+          <div class="btn">
+            <span>Upload</span>
+            <input type="file" id="signup-profile-picture" accept="image/*" />
+          </div>
+          <div class="file-path-wrapper">
+            <input
+              style="border-bottom: none !important"
+              class="file-path validate"
+              type="text"
+              placeholder="Upload your profile picture"
+            />
+          </div>
         </div>
+        <div id="loadertwo" class="loadertwo"></div>
+        <button id="signup-btn">Sign Up</button>
+      </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="pages/auth/auth.js"></script>
-</body>
-
+  </body>
 </html>
