--- a/public/pages/battlefield/battlefield.html
+++ b/public/pages/battlefield/battlefield.html
@@ -15,10 +15,7 @@
 </head>
 
 <body id="body" style="overflow-y: auto;">
-  <div class="background">
-    <div class="shape"></div>
-    <div class="shape"></div>
-  </div>
+
   <nav id="nav-bar" class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a style="color: white; font-weight: 600;" class="navbar-brand" href="#"><span id="logo-F">F</span>- RAPS</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -55,9 +52,11 @@
               </center>
             </div>
           </div>
-          <button id="fight-btn" position-fixed fixed-bottom
-            style="color: white;  background: linear-gradient(to right, #800000 0%, #0000cc 100%);width: 100%;"
-            class="btn" type="button">Fight</button>
+          <div class="d-flex justify-content-center">
+            <button id="fight-btn"
+            
+              class="btn" type="button">Fight</button>
+          </div>
           <!-- <ul id="users-list" class="list-group"></ul> -->
           <!-- <button id="fight-btn" class="btn btn-sm btn-primary">
             Fight
