--- a/public/pages/auth/auth.html
+++ b/public/pages/auth/auth.html
@@ -49,7 +49,7 @@
       ><span id="logo-F">F</span>- RAPS</a
     >
     <div class="background">
-      <img class="mic-img" src="mic.png" alt="" />
+      <img class="mic2-img" src="mic.png" alt="" />
     </div>
     <div class="container">
       <div class="forms" id="login">
