--- a/public/pages/auth/auth.html
+++ b/public/pages/auth/auth.html
@@ -53,7 +53,18 @@
     </div>
     <div class="container">
       <div class="forms" id="login">
-        <h3>Login Here</h3>
+        <a
+          style="
+            color: white;
+            font-weight: 600;
+            font-size: 4rem;
+            margin-left: 2rem;
+          "
+          class="navbar-brand-two"
+          href="#"
+          ><span id="logo-F">F</span>- RAPS</a
+        >
+        <h3 class="login-signup">Login Here</h3>
 
         <label for="username">Nickname</label>
         <input type="Text" autocomplete="do-not-autofill" id="login-nickname" />
@@ -71,7 +82,18 @@
         <button id="login-btn">Log In</button>
       </div>
       <div class="forms" id="signup" style="height: 540px !important">
-        <h3>Sign Up Here</h3>
+        <a
+          style="
+            color: white;
+            font-weight: 600;
+            font-size: 4rem;
+            margin-left: 2rem;
+          "
+          class="navbar-brand-two"
+          href="#"
+          ><span id="logo-F">F</span>- RAPS</a
+        >
+        <h3 class="login-signup">Sign Up Here</h3>
 
         <label for="username">Nickname</label>
         <input
